k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: shanghaitech-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shanghaitech-auth-app
  template:
    metadata:
      labels:
        app: shanghaitech-auth-app
    spec:
      containers:
        - name: app
          image: ghcr.io/hezebang/shanghaitech-auth:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: shanghaitech-auth
spec:
  selector:
    app: shanghaitech-auth-app
  ports:
    - port: 3000
      targetPort: 3000
